# estrutura-de-dados

./: README.md
jogo-da-velha/: jogador.py  jogador_humano.py  jogador_ia.py  pyproject.toml  tabuleiro.py
