[tool.poetry]
name = "jogo-da-velha"
version = "0.1.0"
description = "criar ia para esse jogo da velha"
authors = ["Rodolfo Franca <souzafrodolfo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
